# Troop-QC

.github/workflows/: build-deploy.yaml
QCApi/: Dockerfile  Makefile  pyproject.toml
QCApi/qcapi/: main.py  models.py  routes.py  util.py
QCApi/qcapi/modules/: qcdoublets.py  qcmetrics.py
QCApi/tests/: test_main.py
QCPoller/: Dockerfile  QCPoller.py
