[tool.poetry]
name = "qcapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.2"
httpx = "^0.27.2"
scanpy = "^1.10.3"
pydantic-settings = "^2.6.0"
boto3 = "^1.35.50"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88 
skip-string-normalization = false 
target-version = ["py310"]  
include = '\.pyi?$' 

[tool.flake8]
max-line-length = 88  # Aligns with Black's line length
extend-ignore = ["E203", "W503"]  # Black compatibility for whitespace handling
max-complexity = 10 

[tool.isort]
profile = "black" 
