[tool.poetry]
name = "qcapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
anndata = "0.10.7"
boto3 = "1.34.117"
fastapi = "0.111.0"
pandas = "2.2.2"
pydantic = "2.7.2"
scanpy = "1.10.1"
scikit-image = "0.24.0"
umap = "0.1.1"
numpy = "1.26.4"
scipy = "1.13.1"
statsmodels = "0.14.0"
igraph = "^0.10.6"
louvain = "^0.8.0"
pynndescent = "0.5.10"
setuptools = "68.2.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.27.2"
pydantic-settings = "^2.6.0"
cmake = "^3.31.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88 
skip-string-normalization = false 
target-version = ["py310"]  
include = '\.pyi?$' 

[tool.flake8]
max-line-length = 88  # Aligns with Black's line length
extend-ignore = ["E203", "W503"]  # Black compatibility for whitespace handling
max-complexity = 10 

[tool.isort]
profile = "black" 